--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 This is an index.html file created on the main branch of my ghpagetest repo.
+
+<html>
+    <body>
+        <h1>Hello World!</h1>
+        <p>gh-pages rock!</p>
+    </body>
+</html>
